# lets-try-materialize

./: .gitignore  Makefile  README.md  pyproject.toml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: mzview_market_order_bid_stddev.sql  mzview_market_order_quantity_rolling.sql  mzview_market_orders_bid_avg.sql  mzview_market_orders_bid_max.sql  schema.yml  src_market_orders_raw.sql  view_market_orders.sql
mzdata/: catalog
mzdata/persist/blob/: 0f8342e8-e8b6-4b42-a015-f12e78fef3fc  1f8bba44-e8fc-458d-9314-a152b56e5ed4  24389982-093e-4446-835b-258aa17f897f  7035434c-eae1-49a2-83de-3553cb5f6464  799b5120-3c6a-49a4-9f19-fa4aabcfd17f  91b4372b-9a65-4a52-a2dc-007a4d7d843c  LOCK  META  c01d4f3b-d3e4-4de4-8e3b-f407263bbc72  c25d5a95-0fbb-4fde-9826-3f445ab35615  c624e6ee-d0b8-460c-a7f4-7d7f6f2ee25c  d38cb8e2-ddb3-46a9-a41d-c024d7f4ff8f  ee233838-5295-4734-88a0-fa222cf7af8a  f8ee7f0b-50e7-42ef-84cc-6aa82e7936a2
scripts/: helm_install.sh  kind_install.sh  kind_setup.sh  kubectl_install.sh  materialize_install.sh  metabase_install.sh  nettools_install.sh  poetry_install.sh  postgres_client_install.sh
