[tool.poetry]
name = "lets-try-materialize"
version = "0.1.0"
description = "The XADE Data Vault"
authors = ["Adeeb R <adeeb.armalite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dbt-snowflake = "^1.0.0"
dbt-materialize = "^1.0.1"
snowflake-connector-python = "^2.4.6"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
sqlfluff = "^0.8.0"
sqlfluff-templater-dbt = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
